habitacion falta corregir errores

--- a/demo/src/main/resources/templates/navbar.html
+++ b/demo/src/main/resources/templates/navbar.html
@@ -99,6 +99,7 @@
             <a th:href="@{/}" style="margin-left: 10px;">Hotel Andes</a>
             <div style="margin-left: 1000px;">
                 <a th:href="@{/tiposHabitacion}">Tipos de Habitación</a>
+                <a th:href="@{/habitaciones}">Habitaciones</a>
             </div>
         </nav>
     </div>
