--- a/demo/src/main/resources/templates/habitaciones.html
+++ b/demo/src/main/resources/templates/habitaciones.html
@@ -15,16 +15,22 @@
 
         <a href="/crearHabitacion" class="btn btn-primary mb-3">Crear Nueva Habitación</a>
 
-        <!-- Lista de Habitaciones -->
-        <div th:each="habitacion : ${habitaciones}">
-            <div class="card mb-2">
-                <div class="card-body">
-                    <h5 class="card-title" th:text="${habitacion.tipoHabitacion.nombre}">Nombre del Tipo de Habitación</h5>
-                    <p class="card-text">
-                        Costo: <span th:text="${habitacion.costo}">Costo</span><br>
-                        Tipo Habitación: <span th:text="${habitacion.tipoHabitacion.nombre}">Nombre Tipo Habitación</span>
-                    </p>
-                    <form th:action="@{/eliminarHabitacion}" method="post">
+        <div th:each="habitacion : ${habitaciones}" class="card mb-4">
+            <div class="card-body">
+                <h5 class="card-title" th:text="${habitacion.tipoHabitacion.nombre}">Nombre del Tipo de Habitación</h5>
+                <p class="card-text">Costo: <span th:text="${habitacion.costo}">Costo</span></p>
+                <div class="card mt-3">
+                    <div class="card-body">
+                        <h6 class="card-subtitle mb-2 text-muted">Detalles del Tipo de Habitación</h6>
+                        <p class="card-text">
+                            Tipo Habitación: <span th:text="${habitacion.tipoHabitacion.nombre}">Nombre Tipo Habitación</span><br>
+                            Capacidad: <span th:text="${habitacion.tipoHabitacion.capacidad}">Capacidad</span><br>
+                            Dotación: <span th:text="${habitacion.tipoHabitacion.dotacion}">Dotación</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="mt-3">
+                    <form th:action="@{/eliminarHabitacion}" method="post" style="display: inline;">
                         <input type="hidden" th:value="${habitacion.id}" name="id"/>
                         <button type="submit" class="btn btn-danger">Eliminar</button>
                     </form>
@@ -32,6 +38,7 @@
                 </div>
             </div>
         </div>
+    </div>
 
     </div>
 
