--- a/demo/src/main/resources/templates/navbar.html
+++ b/demo/src/main/resources/templates/navbar.html
@@ -100,6 +100,7 @@
             <div style="margin-left: 1000px;">
                 <a th:href="@{/tiposHabitacion}">Tipos de Habitación</a>
                 <a th:href="@{/habitaciones}">Habitaciones</a>
+                <a th:href="@{/reservas}">Reservas</a>
             </div>
         </nav>
     </div>
