--- a/demo/src/main/resources/templates/navbar.html
+++ b/demo/src/main/resources/templates/navbar.html
@@ -101,6 +101,7 @@
                 <a th:href="@{/tiposHabitacion}">Tipos de Habitación</a>
                 <a th:href="@{/habitaciones}">Habitaciones</a>
                 <a th:href="@{/reservas}">Reservas</a>
+                <a th:href="@{/estadias}">Estadias</a>
             </div>
         </nav>
     </div>
