--- a/demo/src/main/resources/templates/porcentajeOcupacion.html
+++ b/demo/src/main/resources/templates/porcentajeOcupacion.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+
+    <div th:replace="navbar :: navbar"></div>
+    
     <div class="container mt-4">
         <h1>Ocupación de Habitaciones</h1>
         <table class="table table-bordered">
@@ -19,7 +22,7 @@
             <tbody>
                 <tr th:each="ocupacion : ${porcentajeOcupacion}">
                     <td th:text="${ocupacion.habitacionId}"></td>
-                    <td th:text="${ocupacion.porcentajeOcupacion}"></td>
+                    <td th:text="${#numbers.formatDecimal(ocupacion.porcentajeOcupacion, 2)}"></td>
                 </tr>
             </tbody>
         </table>
