--- a/demo/src/main/resources/templates/navbar.html
+++ b/demo/src/main/resources/templates/navbar.html
@@ -102,6 +102,8 @@
                 <a th:href="@{/habitaciones}">Habitaciones</a>
                 <a th:href="@{/reservas}">Reservas</a>
                 <a th:href="@{/estadias}">Estadias</a>
+                <a th:href="@{/cuentasServicio}">Cuenta Servicio</a>
+                <a th:href="@{/serviciosProductos}">Servicios Productos</a>
             </div>
         </nav>
     </div>
